syntax = "proto3";
package proto;

option go_package = "./proto";

message WarlockTalents {
	// Affliction
	int32 suppression = 1;
	int32 improved_corruption = 2;
	int32 improved_curse_of_weakness = 3;
	int32 improved_drain_soul = 4;
	int32 improved_life_tap = 5;
	int32 improved_drain_life = 6;
	int32 improved_curse_of_agony = 7;
	int32 fel_concentration = 8;
	bool amplify_curse = 9;
	int32 grim_reach = 10;
	int32 nightfall = 11;
	int32 improved_drain_mana = 12;
	bool siphon_life = 13;
	bool curse_of_exhaustion = 14;
	int32 improved_curse_of_exhaustion = 15;
	int32 shadow_mastery = 16;
	bool dark_pact = 17;

	// Demonology
	int32 improved_healthstone = 18;
	int32 improved_imp = 19;
	int32 demonic_embrace = 20;
	int32 improved_health_funnel = 21;
	int32 improved_voidwalker = 22;
	int32 fel_intellect = 23;
	int32 improved_sayaad = 24;
	bool fel_domination = 25;
	int32 fel_stamina = 26;
	int32 master_summoner = 27;
	int32 unholy_power = 28;
	int32 improved_subjugate_demon = 29;
	bool demonic_sacrifice = 30;
	int32 improved_firestone = 31;
	int32 master_demonologist = 32;
	bool soul_link = 33;
	int32 improved_spellstone = 34;

	// Destruction
	int32 improved_shadow_bolt = 35;
	int32 cataclysm = 36;
	int32 bane = 37;
	int32 aftermath = 38;
	int32 improved_firebolt = 39;
	int32 improved_lash_of_pain = 40;
	int32 devastation = 41;
	bool shadowburn = 42;
	int32 intensity = 43;
	int32 destructive_reach = 44;
	int32 improved_searing_pain = 45;
	int32 pyroclasm = 46;
	int32 improved_immolate = 47;
	bool ruin = 48;
	int32 emberstorm = 49;
	bool conflagrate = 50;
}

enum WarlockRune {
	WarlockRuneNone = 0;
	RuneChestDemonicTactics   	  = 412727;
	RuneChestLakeOfFire       	  = 403666;
	RuneChestMasterChanneler  	  = 403668;
	RuneChestSoulSiphon       	  = 403511;
	RuneHandsChaosBolt        	  = 403629;
	RuneHandsHaunt	          	  = 403501;
	RuneHandsMetamorphosis    	  = 403789;
	RuneHandsShadowBoltVolley 	  = 403628;
	RuneLegsDemonicGrace      	  = 425463;
	RuneLegsDemonicPact       	  = 425464;
	RuneLegsEverlastingAffliction = 412689;
	RuneLegsIncinerate			  = 412758;
}

message WarlockRotation {
}

message WarlockOptions {
	enum Summon {
		NoSummon = 0;
		Imp = 1;
		Voidwalker = 2;
		Succubus = 3;
		Felhunter = 4;
	}

	enum Armor {
		NoArmor = 0;
		DemonArmor = 1;
	}

	enum WeaponImbue {
		NoWeaponImbue = 0;
		Spellstone = 1;
		Firestone = 2;
	}

	Armor armor = 1;
	Summon summon = 2;
	WeaponImbue weaponImbue = 3;
}

message Warlock {
	WarlockOptions options = 2;
}

message TankWarlock {
	WarlockOptions options = 2;
}